[package]
name = "qmc5883p"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A platform-agnostic driver for the QMC5883P magnetic sensor."
keywords = ["driver", "sensor", "magnetic", "embedded-hal", "i2c", "qmc5883p", "qmc"]
repository = "https://github.com/KapJ1coH/qmc5883p.git"
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embassy-time = { version = "0.5"}
micromath = { version = "2.1", optional = true }
defmt = { version = "1.0", optional = true }

[features]
default = ["defmt", "magnitude"]
defmt = ["dep:defmt", "embassy-time/defmt"]
magnitude = ["dep:micromath"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"  ] }
